--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@docusaurus/core": "3.9.2",
     "@docusaurus/preset-classic": "3.9.2",
+    "@easyops-cn/docusaurus-search-local": "^0.52.2",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
@@ -33,11 +34,11 @@
     "@docusaurus/module-type-aliases": "3.9.2",
     "@docusaurus/types": "3.9.2",
     "@tinacms/cli": "^2.0.6",
-    "tinacms": "^3.1.3",
     "@types/node": "^25.0.3",
     "baseline-browser-mapping": "^2.9.11",
     "chokidar": "^3.5.3",
-    "concurrently": "^8.0.0"
+    "concurrently": "^8.0.0",
+    "tinacms": "^3.1.3"
   },
   "browserslist": {
     "production": [
